@@ -998,3 +998,83 @@ static Bool VIADRIMapInit(ScreenPtr pScreen, VIAPtr pVia)
     
     return TRUE;
 }
+
+void 
+viaDRIOffscreenSave(ScrnInfoPtr pScrn)
+{
+    VIAPtr pVia = VIAPTR(pScrn);
+    VIADRIPtr pVIADRI = pVia->pDRIInfo->devPrivate;
+    unsigned char *saveAddr = pVia->FBBase + pVIADRI->fbOffset; 
+    unsigned long saveSize = pVIADRI->fbSize;
+    drm_via_dmablit_t blit;
+    int err;
+    
+
+    if (pVia->driOffScreenSave)
+	free(pVia->driOffScreenSave);
+
+    pVia->driOffScreenSave = malloc(saveSize + 16);
+    if (pVia->driOffScreenSave) {
+        if ((pVia->drmVerMajor == 2) && (pVia->drmVerMinor >= 8)) {
+	 
+	    blit.num_lines = 1;
+	    blit.line_length = saveSize;
+	    blit.fb_addr = pVIADRI->fbOffset;
+	    blit.fb_stride = ALIGN_TO(saveSize, 16);
+	    blit.mem_addr = (void *)ALIGN_TO((unsigned long) 
+					     pVia->driOffScreenSave, 16);
+	    blit.mem_stride = blit.fb_stride;
+	    blit.to_fb = 0;
+
+	    do {
+		err = drmCommandWriteRead(pVia->drmFD, DRM_VIA_DMA_BLIT, 
+					  &blit, sizeof(blit));
+	    } while (-EAGAIN == err);
+	    if (err) 
+		goto out_err;
+
+	    do {
+		err = drmCommandWriteRead(pVia->drmFD, DRM_VIA_BLIT_SYNC, 
+					  &blit.sync, sizeof(blit.sync));
+	    } while (-EAGAIN == err);
+	    if (err)
+		goto out_err;
+
+	} else {
+	    memcpy((void *)ALIGN_TO((unsigned long) pVia->driOffScreenSave, 16),
+		   saveAddr, saveSize);
+	}
+    } else {
+	xf86DrvMsg(pScrn->scrnIndex, X_ERROR, 
+		   "Out of memory trying to backup DRI offscreen memory.\n");
+    }
+    return;
+    
+  out_err:
+    xf86DrvMsg(pScrn->scrnIndex, X_WARNING, 
+	       "Hardware backup of DRI offscreen memory failed.\n"
+	       "\tUsing slow software backup instead.\n");
+
+    memcpy((void *)ALIGN_TO((unsigned long) pVia->driOffScreenSave, 16),
+	   saveAddr, saveSize);
+    return;
+}
+
+
+void 
+viaDRIOffscreenRestore(ScrnInfoPtr pScrn)
+{
+    VIAPtr pVia = VIAPTR(pScrn);
+    VIADRIPtr pVIADRI = pVia->pDRIInfo->devPrivate;
+
+    unsigned char *saveAddr = pVia->FBBase + pVIADRI->fbOffset; 
+    unsigned long saveSize = pVIADRI->fbSize;
+
+    if (pVia->driOffScreenSave) {
+	memcpy(saveAddr, 
+	       (void *)ALIGN_TO((unsigned long)pVia->driOffScreenSave, 16),
+	       saveSize);
+	free(pVia->driOffScreenSave);
+	pVia->driOffScreenSave = NULL;
+    }
+}
